# bench

./: .env.template  .gitignore  README.md  pyproject.toml
mongobench/: arr_workloads.py  benchmark_helpers.py  flat_helpers.py  flat_workloads.py  obj_benchmark.py  obj_helpers.py  obj_operations.py  testing.py
mongodb/: arr_delete.ipynb  arr_insert.ipynb  arr_read.ipynb  arr_update.ipynb  flat_delete.ipynb  flat_insert.ipynb  flat_ops.py  flat_read.ipynb  flat_update.ipynb  obj_delete.ipynb  obj_insert.ipynb  obj_read.ipynb  obj_update.ipynb
postgresql/: benchmarking.py  db_ops.py  main.py  resources.py  testing.py  workloads.py
result/figs/: couch_analytics.json  couch_mango.json  es_result.json
src/: .env.template  __init__.py  __main__.py  all_types.py
src/base_types/: Arr.py  Base.py  Flat.py  Obj.py  __init__.py
src/benchmark/: base.py
src/couch/: Conn.py  Databases.py  bench.py  bench_a.py  conn.py  helper.py  logger.py  operations.py  warmup.py
src/couchdb/: Arr.py  Base.py  Conn.py  Databases.py  Flat.py  Obj.py  analytic_startup.py  bench.py  bench_analytics.py  bench_misc.py  bench_special.py  commands.txt  conn.py  database_operations.py  helper.py  import_data.py  log_test.py  logger.py  obj_sample.json  op_types.py  operations.py  result.txt  result_special.txt  startup.py  test.py  test_q.py  testarr.py  text.js  warmups.py  workloads.py  workloads_analytic.py
src/description_generator/: __main__.py  assigner.py  conn.py  descriptions.json  exec_type.py  generator.py  main.py  test.json
src/elastic/: __main__.py  all_indexes.py  conn.py  (+9 more)
(+219 files in other folders)
